--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -378,7 +378,7 @@ h1 {
   background-color: var(--dark-purple);
   color: #fff;
   padding: 12px 5%;
-  margin: 32px 16px 32px 0;
+  margin: 32px 5% 32px 0;
   border-radius: 0 0 50px 0;
 }
 h2 {
