--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -367,6 +367,14 @@ h1 {
   padding: 12px 32px;
   border-radius: 0 0 50px 0;
 }
+h1::before {
+  content: "“";
+  font-size: 1.5rem;
+}
+h1::after {
+  content: "”";
+  font-size: 1.5rem;
+}
 section.vision {
   display: flex;
   flex-direction: column;
@@ -381,15 +389,7 @@ div.item-1 {
   font-family: var(--sofia);
   background-color: var(--blue);
   color: #fff;
-  /* border-radius: 25px; */
-}
-.item-1 p::before {
-  content: "“";
-  font-size: 1.5rem;
-}
-.item-1 p::after {
-  content: "”";
-  font-size: 1.5rem;
+  /* border-radius: 15px 0 0 0; */
 }
 div.vision p {
   width: 90%;
@@ -399,11 +399,11 @@ div.vision p {
 figure.vision {
   width: 100%;
   height: 100%;
-  margin: 0 auto 0 auto;
+  margin: auto auto;
 }
 .vision img {
   width: 100%;
-  height: 100%;
+  height: auto;
   margin: 0;
 }
 img.large-screen {
@@ -442,7 +442,7 @@ section.tourguides {
   /* background-color: var(--light-grey); */
 }
 .image-wrapper {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -478,7 +478,7 @@ h4 {
   background-color: var(--dark-purple);
   color: #fff;
   padding: 12px 16px;
-  margin: 32px 16px 0 0;
+  margin: 32px 5% 0 0;
   border-radius: 0 0 50px 0;
 }
 h5 {
@@ -496,7 +496,7 @@ p.tourguides {
   color: #fff;
   padding: 12px 32px;
   margin-bottom: 16px;
-  margin-left: 16px;
+  margin-left: 5%;
   border-radius: 50px 0 0 0;
 }
 .newsletter-wrapper {
@@ -671,6 +671,12 @@ h6 {
     font-size: 1.875rem;
     text-align: center;
   }
+  h1::before {
+    font-size: 1.875rem;
+  }
+  h1::after {
+    font-size: 1.875rem;
+  }
   section.newsletter {
     width: 70%;
   }
@@ -736,6 +742,21 @@ h6 {
   }
   /* Main
 --------------------*/
+  h1 {
+    font-size: 2.25rem;
+  }
+  h1::before {
+    font-size: 2.25rem;
+  }
+  h1::after {
+    font-size: 2.25rem;
+  }
+  section {
+    width: 70%;
+  }
+  .get-in-touch {
+    width: 70%;
+  }
   section.newsletter {
     width: 50%;
   }
@@ -766,6 +787,38 @@ h6 {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
+  section {
+    width: 90%;
+  }
+  .get-in-touch {
+    width: 90%;
+  }
+  .item-1 {
+    grid-area: introduction;
+  }
+  .item-2 {
+    grid-area: image;
+  }
+  .item-3 {
+    grid-area: paragraph-1;
+  }
+  .item-4 {
+    grid-area: paragraph-2;
+  }
+  .item-5 {
+    grid-area: paragraph-3;
+  }
+  section.vision {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr auto auto auto;
+    grid-template-areas:
+      "introduction introduction paragraph-3 paragraph-3"
+      "paragraph-1 paragraph-1 paragraph-3 paragraph-3"
+      "paragraph-1 paragraph-1 image image"
+      "paragraph-2 paragraph-2  image image"
+      "paragraph-2 paragraph-2 image image";
+  }
   section.newsletter {
     width: 40%;
   }
@@ -886,49 +939,24 @@ border-right: 2px solid transparent; */
     display: block;
   }
   h1 {
-    display: block;
     width: 90%;
-    margin: 50px auto 16px auto;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    margin: 50px auto 32px auto;
     text-transform: capitalize;
     text-align: center;
     border-radius: 0;
   }
-  .item-1 {
-    grid-area: introduction;
+  h1::before {
+    font-size: 2.5rem;
   }
-  .item-2 {
-    grid-area: image;
-  }
-  .item-3 {
-    grid-area: paragraph-1;
-  }
-  .item-4 {
-    grid-area: paragraph-2;
-  }
-  .item-5 {
-    grid-area: paragraph-3;
-  }
-  section.vision {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "introduction paragraph-2 image"
-      "paragraph-1 paragraph-2 image"
-      "paragraph-1 paragraph-3 image"
-      "paragraph-1 paragraph-3 image";
+  h1::after {
+    font-size: 2.5rem;
   }
   h5 {
     font-size: 1.25rem;
   }
   .item-1 p {
-    font-size: 1.25rem;
-  }
-  .item-3,
-  .item-4,
-  .item-5 {
-    font-size: 1.25rem;
+    font-size: 1.125rem;
   }
   .get-in-touch {
     flex-direction: row;
@@ -1009,6 +1037,24 @@ border-right: 2px solid transparent; */
   }
   .connect li {
     padding: 8px;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  /* Main
+--------------------*/
+  section.vision {
+    grid-template-columns: 1fr 1fr auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "introduction paragraph-2 image"
+      "paragraph-1 paragraph-2 image"
+      "paragraph-1 paragraph-3 image"
+      "paragraph-1 paragraph-3 image";
+  }
+  .item-3,
+  .item-4,
+  .item-5 {
+    font-size: 1.125rem;
   }
 }
 @media only screen and (min-width: 1800px) {
