--- a/styles/contact.css
+++ b/styles/contact.css
@@ -350,7 +350,9 @@ ul li {
 --------------------*/
 .main-wrapper {
   width: 100%;
+  background-color: var(--light-grey);
   margin: 0 auto;
+  padding-bottom: 50px;
 }
 h1 {
   font-family: var(--proxima);
@@ -368,7 +370,6 @@ section.faq,
 section.newsletter {
   width: 90%;
   margin: 0 auto;
-  /* background-color: teal; */
 }
 section > p {
   font-family: var(--sofia);
@@ -618,10 +619,16 @@ h6 {
   }
   /* Main
 --------------------*/
+  .main-wrapper {
+    width: 90%;
+  }
   h1 {
     font-size: 1.875rem;
     text-align: center;
+    border-radius: 0;
+    margin-right: 0;
   }
+  section.contact,
   section.newsletter {
     width: 70%;
   }
@@ -687,8 +694,8 @@ h6 {
   }
   /* Main
 --------------------*/
-  section.newsletter {
-    width: 50%;
+  h1 {
+    font-size: 2.25rem;
   }
 
   /* Footer
@@ -717,6 +724,9 @@ h6 {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
+  .main-wrapper {
+    width: 70%;
+  }
   section.newsletter {
     width: 40%;
   }
@@ -832,20 +842,16 @@ border-right: 2px solid transparent; */
 --------------------*/
   .main-wrapper {
     width: 50%;
-    background-color: var(--light-grey);
     padding-bottom: 50px;
   }
   .newsletter-wrapper {
     width: 90%;
   }
   h1 {
-    font-family: var(--proxima);
-    font-size: 2rem;
-    text-align: center;
-    margin-right: 0;
+    font-size: 2.5rem;
   }
   section.contact {
-    width: 50%;
+    width: 70%;
   }
   section > p {
     font-size: 1.25rem;
