--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -294,6 +294,8 @@ nav.menu {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 0;
+  border-right: 8px solid var(--dark-purple);
+  border-radius: 0 100px 0 0;
 }
 header {
   display: inline;
@@ -707,6 +709,9 @@ h6 {
 @media only screen and (min-width: 576px) {
   /* Header
 --------------------*/
+  .icons label span {
+    font-size: 3rem;
+  }
   .search-dropdown,
   .ticket-dropdown,
   .profile-dropdown {
@@ -787,9 +792,6 @@ h6 {
   }
   .logo img {
     width: 300px;
-  }
-  .icons label span {
-    font-size: 3rem;
   }
   .header-wrapper {
     width: 90%;
@@ -920,7 +922,6 @@ h6 {
   }
   nav.menu {
     height: 60px;
-    border-radius: 0 100px 0 0;
     align-items: center;
     justify-content: space-around;
   }
