--- a/styles/visit.css
+++ b/styles/visit.css
@@ -33,7 +33,9 @@ a {
   text-decoration: none;
   color: #fff;
 }
-* header --------------------*/ .icons label {
+/* header 
+--------------------*/
+.icons label {
   display: block;
 }
 /* search-dropdown */
@@ -289,6 +291,8 @@ nav.menu {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 0;
+  border-right: 8px solid var(--dark-purple);
+  border-radius: 0 100px 0 0;
 }
 header {
   display: inline;
@@ -379,9 +383,6 @@ h3 {
   font-size: 1.5rem;
   padding-top: 16px;
   margin-top: 0;
-}
-h3 {
-  padding-top: ;
 }
 div.info {
   width: 100%;
@@ -622,6 +623,9 @@ h6 {
 @media only screen and (min-width: 576px) {
   /* Header
 --------------------*/
+  .icons label span {
+    font-size: 3rem;
+  }
   .search-dropdown,
   .ticket-dropdown,
   .profile-dropdown {
@@ -657,9 +661,6 @@ h6 {
   }
   .logo img {
     width: 300px;
-  }
-  .icons label span {
-    font-size: 3rem;
   }
   .header-wrapper {
     width: 90%;
@@ -831,7 +832,6 @@ h6 {
   }
   nav.menu {
     height: 60px;
-    border-radius: 0 100px 0 0;
     align-items: center;
     justify-content: space-around;
   }
